                W I N G   C H A N G E S
----------------------------------------------------------
This file tracks the changes to Wing over time. Especially
with respect to new features and compatibility changes.
==========================================================

2015-06-22
 * Better debug when an object is not found via fetch_object.

2015-06-21
 * Added fetch_creation_options() to objectListManager in wing.angular.js.
 * Wing defaultly uses wing.angular.js now in its templates.

2015-05-10
 * Fix an IE cache issue in wing.angular.js.

2015-04-23
 * Added the "cache" module to Wing::Command so you can get, set, and remove items in the cache from the command line.

2015-04-12
 * Added _sort_order and _order_by handlers to Wing::Dancer::format_list().

2015-04-11
 * Added timeago date filter in wing.angular.js.
 * Added unshift option to create on objectListManager in wing.angular.js.

2015-04-09
 * Added "email_override" option to the config file. If this is specified then any emails sent out will always go to that address rather than the intented recipient.

2015-03-31
 * A massive overhaul to wing.angular.js:
 * Refactored objectListManager factory to be smaller and more flexible.
 * Moved confirmations from objectListManager into it's own factory.
 * Added objectManager factory and made objectListManager use objectManager objects.
 * Added directive for input[number] to force the model to always be a number.
 * Added autosave directive which works similar to wing.attach_autosave()
 * Added wing-select directive, which autogenerates <select> lists from _options data.
 * Added force-string directive, which forces numbers to be strings for display purposes on a model. This is needed because Perl hash keys aare always strings, but scalars can be strings or numbers, so when comparing them in js 1 != '1'. 

2015-03-29
 * Added wing.merge() to wing.js, which is useful for merging parameter hashes to make a request back to the server.